2003-09-08  Naba Kumar  <naba@gnome.org>

	* TODO: Updated.
	* src/utilities.[c,h]: a function takes contant args.
	* src/anjuta.[c,h]: Fixed child registering/unregistering routine.
	Now the child terminated signal is emitted properly.
	* src/Makefile.am: Used $(top_srcdir) for referring to 
	scintilla objects.
	* (new) src/anjuta-marshalers.list, src/Makefile.am: Added marshalers
	definitions file which will generate anjuta-marshalers.[c,h] files.
	* src/.cvsignore: Updated.
	* src/build_project.c: Changed su command to preserve quotes.
	* src/anjuta-tools.c, tagmanager/tm_project.c,
	tagmanager/tm_workspace.c: Use standard tmp file.
	* configure.in: Cleaned up. Provide -g -O0 flags for final build also
	so that users could report bugs easily.
	* configure.in, anjuta.spec.in: Removed libzvt references/dependency.
	
	* tagmanager/tm_workspace.c, tm_file_entry.c, widgets/gnomefilelist.c,
	printing/print.c, plugins/sample1/plugin-sample1.c, src/an_file_view.c,
	src/an_symbol_view.c, src/utilities.[c,h], src/anjuta-encodings.c,
	src/attach_process.c, src/breakpoints.c, src/commands.c,
	src/compiler_options.c, src/configurer.c, src/cvs_gui.c,
	src/cvs_cbs.c, src/debug_tree.c, src/debugger.c, src/executer.c,
	src/find_in_files.c, src/find_in_files_cbs.c, src/mainmenu_callbacks.c,
	src/memory.c, src/message-manager-private.c, src/preferences.c,
	src/project_config.c, src/project_dbase.c, src/source.h, src/src_paths.c,
	src/search-replace.[c,h], stack_trace.c, text_editor.c,
	src/text_editor_cbs.c, src/toolbars.c, src/watch.c, src/watch_gui.c,
	src/source.c, src/anjuta.c, src/glade_iface.c, src/style_editor.c:
	Fixed compile warnings and cleanup.
	
	* src/launcher.[c,h], src/anjuta-tools.c, src/build_file.c,
	src/build_project.c, src/clean_project.c, src/compile.c, src/configurer.c,
	src/cvs.c, src/find_in_files.c, src/gnome_project.c, src/project_import.c: 
	Removed libzvt usage and implemented child spawing differently. Launcher is